--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <p>Traga um prato de salgado e um refrigerante</p>
 					</section>
                     <footer>
-                        <p>Com amor, Lu & Clau</p>
+                        <p>Crisoprásio: Representa um casamento valioso que, apesar de resistente, precisa de cuidado e delicadeza para ser preservado. A pedra simboliza a fidelidade, a harmonia entre o casal e a prosperidade alcançada ao longo da jornada. </p>
 					<div class="envelope-controls">
 						<button class="btn secondary" id="close-envelope" aria-hidden="true">Fechar carta</button>
 					</div>
