--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 					<header>
 						<h1>Lu & Clau</h1>
 						<p class="names">Bodas de Crisoprásio <span></p>
+						<p class="names">27 anos<span></p>
 					</header>
 
 					<section class="details">
