--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
 					<section class="details">
 						<p class="date">30 de Novembro de 2025 — 17:30</p>
+                        <p class="venue">Convidamos você para celebrar mais um momento especial de muita história e amor.
+ Nesta data especial, vamos comemorar o amor, a união e a família construída com tanto carinho.
+ Sua presença tornará esse momento ainda mais especial.</p>
 					</section>
 
 					<section class="rsvp">
@@ -29,7 +32,9 @@
                         <p>Traga um prato de salgado e um refrigerante</p>
 					</section>
                     <footer>
-                        <p>Crisoprásio: Representa um casamento valioso que, apesar de resistente, precisa de cuidado e delicadeza para ser preservado. A pedra simboliza a fidelidade, a harmonia entre o casal e a prosperidade alcançada ao longo da jornada. </p>
+                        <p>Crisoprásio: Representa um casamento valioso que, 
+                            apesar de resistente, precisa de cuidado e delicadeza 
+                            para ser preservado. A pedra simboliza a fidelidade. </p>
 					<div class="envelope-controls">
 						<button class="btn secondary" id="close-envelope" aria-hidden="true">Fechar carta</button>
 					</div>
