--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 					<section class="details">
 						<p class="date">30 de Novembro de 2025 — 17:30</p>
                         <p class="venue">Convidamos você para celebrar mais um momento especial de muita história e amor.
- Nesta data especial, vamos comemorar o amor, a união e a família construída com tanto carinho.
+ Nesta data especial, vamos comemorar a união construída com tanto carinho.
  Sua presença tornará esse momento ainda mais especial.</p>
 					</section>
 
 					<section class="rsvp">
 						<p>Confirme sua presença por whats</p>
-                        <p>Traga um prato de salgado e um refrigerante</p>
+                        <p>Traga um prato de salgado e um refrigerante.</p>
 					</section>
                     <footer>
                         <p>Crisoprásio: Representa um casamento valioso que, 
