--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
 <head>
 <style>
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("transferir.jpeg") no-repeat center center;
+  background-size: cover;
   margin: 0;
   height: 100vh;
   overflow: hidden;
   color: #fff;
   font-size: 2em;
-}
-
-.fundo-fixo {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("transferir.jpeg") no-repeat center center;
-  background-size: cover;
-  z-index: 0;
 }
 
 @keyframes fogos {
@@ -262,10 +256,6 @@ body {
 }
 
 .texto-centro {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-family: 'Georgia', serif;
   text-shadow: 0 0 10px #000;
   color: #fff;
@@ -273,19 +263,15 @@ body {
   padding: 30px;
   border-radius: 10px;
   z-index: 10;
-  backface-visibility: hidden;
-  transform-style: flat;
-  isolation: isolate;
   text-align: center;
   max-width: 80%;
 }
 
 
+
 </style>
 </head>
 <body>
-
-	  <div class="fundo-fixo"></div>
 
 	  <div class="texto-centro">
     <strong>Lu & Clau — 27 anos</strong><br>
