--- a/index.html
+++ b/index.html
@@ -2,43 +2,52 @@
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <style>
-/* Fundo fixo sem usar background-attachment */
-body {
+/* Base estável (sem transforms em ancestrais) */
+html, body {
   margin: 0;
-  height: 100vh;
+  padding: 0;
+  height: 100%;
   overflow: hidden;
   color: #fff;
   font-size: 2em;
-  position: relative;
 }
-body::before {
-  content: "";
+
+/* Fundo fixo independente (não usa background-attachment) */
+.bg-fixed {
   position: fixed;
   inset: 0;
   background: url("transferir.jpeg") no-repeat center center;
   background-size: cover;
-  z-index: -3; /* atrás de tudo */
+  z-index: 0;
+  will-change: transform;
+  transform: translateZ(0);
 }
 
-/* Camada dos fogos */
+/* Camada dos fogos — fixa e atrás do texto */
 .stage {
   position: fixed;
   inset: 0;
+  z-index: 1;
   pointer-events: none;
-  z-index: -2; /* acima do fundo, atrás do texto */
+  will-change: transform;
+  transform: translateZ(0);
+  contain: layout paint size style;
 }
 
-/* Texto fixo e centralizado */
+/* Texto fixo e centrado por viewport */
 .overlay-text {
   position: fixed;
   inset: 0;
+  z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  will-change: transform;
+  transform: translateZ(0);
 }
+
 .texto-centro {
   font-family: 'Georgia', serif;
   text-shadow: 0 0 10px #000;
@@ -48,13 +57,14 @@ body::before {
   border-radius: 10px;
   text-align: center;
   max-width: 80%;
+  backface-visibility: hidden;
 }
 
-/* Animação dos fogos */
+/* Animação dos fogos — somente 2D, usando translate3d */
 @keyframes fogos {
-  0% { transform: translate(var(--x), var(--initialY)); width: var(--initialSize); opacity: 1; }
-  50% { width: 0.5vmin; opacity: 1; }
-  100% { width: var(--finalSize); opacity: 0; }
+  0%   { transform: translate3d(var(--x), var(--initialY), 0); width: var(--initialSize); opacity: 1; }
+  50%  { width: 0.5vmin; opacity: 1; }
+  100% { transform: translate3d(var(--x), var(--y), 0); width: var(--finalSize); opacity: 0; }
 }
 
 .fogos,
@@ -69,17 +79,17 @@ body::before {
   --color4: #FFFACD;
   --color5: #7B68EE;
   --color6: #B0E0E6;
-  --y: -30vmin;
   --x: -50%;
   --initialY: 60vmin;
+  --y: -30vmin;
+
   content: "";
-  animation: fogos 4s infinite;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, var(--y));
   width: var(--initialSize);
   aspect-ratio: 1;
+  animation: fogos 4s infinite;
   background:
     radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 0%,
     radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 0%,
@@ -87,54 +97,93 @@ body::before {
     radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 100%;
   background-size: var(--initialSize) var(--initialSize);
   background-repeat: no-repeat;
+
+  will-change: transform, opacity, width;
+  transform: translate3d(-50%, var(--y), 0);
+  backface-visibility: hidden;
 }
 
-/* Ajustes extras para cada fogo */
+/* Removido rotateY/3D: deixa só 2D para estabilidade mobile */
+.fogos::before {
+  --x: -50%;
+  --initialY: -50%;
+  --y: -50%;
+}
+.fogos::after {
+  --x: -50%;
+  --initialY: -50%;
+  --y: -50%;
+}
+
+/* Presets de cores/posições (mantidos, mas 2D) */
+.fogos:nth-child(1) { /* central base, sem overrides */ }
+
+.fogos:nth-child(2) { --x: 30vmin; }
 .fogos:nth-child(2),
 .fogos:nth-child(2)::before,
 .fogos:nth-child(2)::after {
   --color1: pink; --color2: violet; --color3: fuchsia; --color4: orchid; --color5: plum; --color6: lavender;
   --finalSize: 40vmin; left: 30%; top: 60%; animation-delay: -2s;
 }
+
+.fogos:nth-child(3) { --x: -30vmin; --y: -50vmin; }
 .fogos:nth-child(3),
 .fogos:nth-child(3)::before,
 .fogos:nth-child(3)::after {
   --color1: #AFEEEE; --color2: #40E0D0; --color3: #87CEFA; --color4: #708090; --color5: #E0FFFF; --color6: #E6E6FA;
   --finalSize: 35vmin; left: 70%; top: 60%; animation-delay: -10s;
 }
+
+.fogos:nth-child(4) { --x: -30vmin; --y: -30vmin; }
 .fogos:nth-child(4),
 .fogos:nth-child(4)::before,
 .fogos:nth-child(4)::after {
   --color1: #fff; --color2: #bbb; --color3: #ccc; --color4: #ccc; --color5: #bbb; --color6: #fff;
   --finalSize: 100vmin; left: 20%; top: 20%; animation-delay: -10s;
 }
+
+.fogos:nth-child(5) { --x: -200vmin; --y: -20vmin; }
 .fogos:nth-child(5),
 .fogos:nth-child(5)::before,
 .fogos:nth-child(5)::after {
   --color1: #ff0000; --color2: #ff9e4e; --color3: #ff5703; --color4: #f3ff0c; --color5: #c8db65; --color6: #e56868;
   --finalSize: 100vmin; left: 20%; top: 20%; animation-delay: -10s;
 }
+
+.fogos:nth-child(6) { --x: 10vmin; --y: 10vmin; }
 .fogos:nth-child(6),
 .fogos:nth-child(6)::before,
 .fogos:nth-child(6)::after {
   --color1: #f703ff; --color2: #7b1077; --color3: #ff0385; --color4: #7a032b; --color5: #bf01ff; --color6: #bb62b8;
   --finalSize: 100vmin; left: 20%; top: 20%; animation-delay: -10s;
 }
+
+.fogos:nth-child(7) { --x: 10vmin; --y: 10vmin; }
 .fogos:nth-child(7),
 .fogos:nth-child(7)::before,
 .fogos:nth-child(7)::after {
   --color1: #64ff03; --color2: #0c6a17; --color3: #03ff79; --color4: #489500; --color5: #135f11; --color6: #5be34e;
   --finalSize: 100vmin; left: 70%; top: 60%; animation-delay: -10s;
 }
+
+.fogos:nth-child(8) { --x: -30vmin; --y: -30vmin; }
 .fogos:nth-child(8),
 .fogos:nth-child(8)::before,
 .fogos:nth-child(8)::after {
   --color1: #ffd103; --color2: #17107b; --color3: #ff0385; --color4: #1b7a03; --color5: #ff0101; --color6: #bb62b8;
   --finalSize: 100vmin; left: 70%; top: 60%; animation-delay: -10s;
 }
+
+/* Preferência de reduzir movimento (opcional) */
+@media (prefers-reduced-motion: reduce) {
+  .fogos, .fogos::before, .fogos::after { animation: none; }
+}
 </style>
 </head>
 <body>
+
+  <!-- Fundo fixo -->
+  <div class="bg-fixed"></div>
 
   <!-- Texto fixo -->
   <div class="overlay-text">
@@ -147,7 +196,7 @@ body::before {
     </div>
   </div>
 
-  <!-- Fogos -->
+  <!-- Fogos fixos -->
   <div class="stage">
     <div class="fogos"></div>
     <div class="fogos"></div>
