--- a/index.html
+++ b/index.html
@@ -1,212 +1,187 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<style>
-/* Base estável (sem transforms em ancestrais) */
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
-  color: #fff;
-  font-size: 2em;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Carrossel</title>
+  <style>
+    body {
+      background: #f2f2f2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
 
-/* Fundo fixo independente (não usa background-attachment) */
-.bg-fixed {
-  position: fixed;
-  inset: 0;
-  background: url("transferir.jpeg") no-repeat center center;
-  background-size: cover;
-  z-index: 0;
-  will-change: transform;
-  transform: translateZ(0);
-}
+    .carousel {
+      position: relative;
+      width: 80%;
+      height: 400px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-/* Camada dos fogos — fixa e atrás do texto */
-.stage {
-  position: fixed;
-  inset: 0;
-  z-index: 1;
-  pointer-events: none;
-  will-change: transform;
-  transform: translateZ(0);
-  contain: layout paint size style;
-}
+    .carousel img {
+      width: 80%;
+      height: auto;
+      opacity: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: all 0.6s ease-in-out;
+      border-radius: 15px;
+      pointer-events: none;
+    }
 
-/* Texto fixo e centrado por viewport */
-.overlay-text {
-  position: fixed;
-  inset: 0;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  will-change: transform;
-  transform: translateZ(0);
-}
+    .carousel img.active {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1);
+      filter: blur(0);
+      pointer-events: auto;
+    }
 
-.texto-centro {
-  font-family: 'Georgia', serif;
-  text-shadow: 0 0 10px #000;
-  color: #fff;
-  background-color: #70809076;
-  padding: 30px;
-  border-radius: 10px;
-  text-align: center;
-  max-width: 80%;
-  backface-visibility: hidden;
-}
+    .carousel img.left {
+      opacity: 0.7;
+      transform: translate(-150%, -50%) scale(0.85);
+      filter: blur(3px);
+    }
 
-/* Animação dos fogos — somente 2D, usando translate3d */
-@keyframes fogos {
-  0%   { transform: translate3d(var(--x), var(--initialY), 0); width: var(--initialSize); opacity: 1; }
-  50%  { width: 0.5vmin; opacity: 1; }
-  100% { transform: translate3d(var(--x), var(--y), 0); width: var(--finalSize); opacity: 0; }
-}
+    .carousel img.right {
+      opacity: 0.7;
+      transform: translate(50%, -50%) scale(0.85);
+      filter: blur(3px);
+    }
 
-.fogos,
-.fogos::before,
-.fogos::after {
-  --initialSize: 0.5vmin;
-  --finalSize: 45vmin;
-  --particleSize: 0.2vmin;
-  --color1: #FFFFE0;
-  --color2: #FAEBD7;
-  --color3: #D2B48C;
-  --color4: #FFFACD;
-  --color5: #7B68EE;
-  --color6: #B0E0E6;
-  --x: -50%;
-  --initialY: 60vmin;
-  --y: -30vmin;
+    .prev,
+    .next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 30px;
+      padding: 10px 15px;
+      border-radius: 50%;
+      transition: background 0.3s;
+      z-index: 2;
+    }
 
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: var(--initialSize);
-  aspect-ratio: 1;
-  animation: fogos 4s infinite;
-  background:
-    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 0%,
-    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 0%,
-    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 100%,
-    radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 100%;
-  background-size: var(--initialSize) var(--initialSize);
-  background-repeat: no-repeat;
+    .prev:hover,
+    .next:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
 
-  will-change: transform, opacity, width;
-  transform: translate3d(-50%, var(--y), 0);
-  backface-visibility: hidden;
-}
+    .prev {
+      left: 10px;
+    }
 
-/* Removido rotateY/3D: deixa só 2D para estabilidade mobile */
-.fogos::before {
-  --x: -50%;
-  --initialY: -50%;
-  --y: -50%;
-}
-.fogos::after {
-  --x: -50%;
-  --initialY: -50%;
-  --y: -50%;
-}
+    .next {
+      right: 10px;
+    }
 
-/* Presets de cores/posições (mantidos, mas 2D) */
-.fogos:nth-child(1) { /* central base, sem overrides */ }
+    .carousel-indicators {
+      display: flex;
+      gap: 10px;
+      margin-top: 20px;
+    }
 
-.fogos:nth-child(2) { --x: 30vmin; }
-.fogos:nth-child(2),
-.fogos:nth-child(2)::before,
-.fogos:nth-child(2)::after {
-  --color1: pink; --color2: violet; --color3: fuchsia; --color4: orchid; --color5: plum; --color6: lavender;
-  --finalSize: 40vmin; left: 30%; top: 60%; animation-delay: -2s;
-}
+    .dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: rgba(65, 63, 47, 0.5);
+      cursor: pointer;
+      transition: background 0.3s;
+    }
 
-.fogos:nth-child(3) { --x: -30vmin; --y: -50vmin; }
-.fogos:nth-child(3),
-.fogos:nth-child(3)::before,
-.fogos:nth-child(3)::after {
-  --color1: #AFEEEE; --color2: #40E0D0; --color3: #87CEFA; --color4: #708090; --color5: #E0FFFF; --color6: #E6E6FA;
-  --finalSize: 35vmin; left: 70%; top: 60%; animation-delay: -10s;
-}
+    .dot.active-dot {
+      background: rgb(18, 14, 231);
+    }
 
-.fogos:nth-child(4) { --x: -30vmin; --y: -30vmin; }
-.fogos:nth-child(4),
-.fogos:nth-child(4)::before,
-.fogos:nth-child(4)::after {
-  --color1: #fff; --color2: #bbb; --color3: #ccc; --color4: #ccc; --color5: #bbb; --color6: #fff;
-  --finalSize: 100vmin; left: 20%; top: 20%; animation-delay: -10s;
-}
+    @media (max-width: 768px) {
+      .carousel {
+        width: 90%;
+        height: 250px;
+      }
 
-.fogos:nth-child(5) { --x: -200vmin; --y: -20vmin; }
-.fogos:nth-child(5),
-.fogos:nth-child(5)::before,
-.fogos:nth-child(5)::after {
-  --color1: #ff0000; --color2: #ff9e4e; --color3: #ff5703; --color4: #f3ff0c; --color5: #c8db65; --color6: #e56868;
-  --finalSize: 100vmin; left: 20%; top: 20%; animation-delay: -10s;
-}
+      .carousel img {
+        width: 90%;
+      }
 
-.fogos:nth-child(6) { --x: 10vmin; --y: 10vmin; }
-.fogos:nth-child(6),
-.fogos:nth-child(6)::before,
-.fogos:nth-child(6)::after {
-  --color1: #f703ff; --color2: #7b1077; --color3: #ff0385; --color4: #7a032b; --color5: #bf01ff; --color6: #bb62b8;
-  --finalSize: 100vmin; left: 20%; top: 20%; animation-delay: -10s;
-}
-
-.fogos:nth-child(7) { --x: 10vmin; --y: 10vmin; }
-.fogos:nth-child(7),
-.fogos:nth-child(7)::before,
-.fogos:nth-child(7)::after {
-  --color1: #64ff03; --color2: #0c6a17; --color3: #03ff79; --color4: #489500; --color5: #135f11; --color6: #5be34e;
-  --finalSize: 100vmin; left: 70%; top: 60%; animation-delay: -10s;
-}
-
-.fogos:nth-child(8) { --x: -30vmin; --y: -30vmin; }
-.fogos:nth-child(8),
-.fogos:nth-child(8)::before,
-.fogos:nth-child(8)::after {
-  --color1: #ffd103; --color2: #17107b; --color3: #ff0385; --color4: #1b7a03; --color5: #ff0101; --color6: #bb62b8;
-  --finalSize: 100vmin; left: 70%; top: 60%; animation-delay: -10s;
-}
-
-/* Preferência de reduzir movimento (opcional) */
-@media (prefers-reduced-motion: reduce) {
-  .fogos, .fogos::before, .fogos::after { animation: none; }
-}
-</style>
+      .prev,
+      .next {
+        font-size: 20px;
+        padding: 8px;
+      }
+    }
+  </style>
 </head>
 <body>
-
-  <!-- Fundo fixo -->
-  <div class="bg-fixed"></div>
-
-  <!-- Texto fixo -->
-  <div class="overlay-text">
-    <div class="texto-centro">
-      <strong>Lu & Clau — 27 anos</strong><br>
-      <em>Bodas de Crisoprário</em><br><br>
-      Convidamos você para celebrar mais um momento especial de muita história e amor.<br>
-      Nesta data especial, vamos comemorar o amor, a união e a família construída com tanto carinho.<br>
-      Sua presença tornará esse momento ainda mais especial.
-    </div>
+  <div class="carousel" aria-label="Galeria de imagens de Petshop">
+    <img src="rosto.jpg" class="active" />
+    <img src="bolo.jpg" />
+    <img src="casal.jpg"/>
+    <img src="fotocasal.jpg" />
+    <img src="alinaca.jpg" />
   </div>
 
-  <!-- Fogos fixos -->
-  <div class="stage">
-    <div class="fogos"></div>
-    <div class="fogos"></div>
-    <div class="fogos"></div>
-    <div class="fogos"></div>
-    <div class="fogos"></div>
-    <div class="fogos"></div>
-    <div class="fogos"></div>
-    <div class="fogos"></div>
-  </div>
+  <div class="carousel-indicators" aria-label="Indicadores do carousel"></div>
 
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const carousel = document.querySelector('.carousel');
+      const images = carousel.querySelectorAll('img');
+      const indicatorsContainer = document.querySelector('.carousel-indicators');
+
+      let currentIndex = 0;
+
+      // Cria os pontinhos (indicadores)
+      images.forEach((_, index) => {
+        const dot = document.createElement('div');
+        dot.classList.add('dot');
+        if (index === 0) dot.classList.add('active-dot');
+        dot.addEventListener('click', () => showImage(index));
+        indicatorsContainer.appendChild(dot);
+      });
+
+      const dots = indicatorsContainer.querySelectorAll('.dot');
+
+      function showImage(index) {
+        images.forEach((img, i) => {
+          img.classList.remove('active', 'left', 'right');
+          dots[i].classList.remove('active-dot');
+
+          if (i === index) {
+            img.classList.add('active');
+            dots[i].classList.add('active-dot');
+          } else if (i === (index - 1 + images.length) % images.length) {
+            img.classList.add('left');
+          } else if (i === (index + 1) % images.length) {
+            img.classList.add('right');
+          }
+        });
+        currentIndex = index;
+      }
+
+      function nextImage() {
+        const nextIndex = (currentIndex + 1) % images.length;
+        showImage(nextIndex);
+      }
+
+      function prevImage() {
+        const prevIndex = (currentIndex - 1 + images.length) % images.length;
+        showImage(prevIndex);
+      }
+
+      setInterval(nextImage, 2000);
+    });
+  </script>
 </body>
 </html>
