--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Carrossel</title>
   <style>
     body {
-      background: url("transferir.jpeg");
+      background: url("Like.jpeg");
       display: flex;
       flex-direction: column;
       align-items: center;
