--- a/index.html
+++ b/index.html
@@ -92,10 +92,14 @@
 <body>
   <div class="carousel" aria-label="carrossel">
     <img src="rosto.jpg"/>
+	<img src="i1.jpg" />
     <img src="bolo.jpg" />
     <img src="casal.jpg"/>
+	 <img src="i2.jpg" />
     <img src="fotocasal.jpg" />
     <img src="alinaca.jpg" />
+    
+   
   </div>
 
   <div class="carousel-indicators" aria-label="Indicadores do carousel"></div>
@@ -107,7 +111,7 @@
       const indicatorsContainer = document.querySelector('.carousel-indicators');
 
       let currentIndex = 0;
-	  
+
       images.forEach((_, index) => {
         const dot = document.createElement('div');
         dot.classList.add('dot');
