--- a/index.html
+++ b/index.html
@@ -86,9 +86,16 @@
         width: 90%;
       }
     }
+
+h3{
+  background-color: rgba(245, 245, 220, 0.583);
+  padding: 20px;
+  border-radius: 10px;
+}
   </style>
 </head>
 <body>
+  <h3>Lu & Clau - 27 anos</h3>
   <div class="carousel" aria-label="carrossel">
     <img src="rosto.jpg"/>
 	<img src="i1.jpg" />
@@ -97,12 +104,14 @@
 	 <img src="i2.jpg" />
     <img src="fotocasal.jpg" />
     <img src="alinaca.jpg" />
-    
-   
   </div>
-
   <div class="carousel-indicators" aria-label="Indicadores do carousel"></div>
 
+
+  <h3>Convidamos você para celebrar mais um momento especial de muita história e amor.
+ Nesta data especial, vamos comemorar o amor, a união e a família construída com tanto carinho.
+ Sua presença tornará esse momento ainda mais especial.</h3>
+  
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const carousel = document.querySelector('.carousel');
