--- a/index.html
+++ b/index.html
@@ -91,6 +91,56 @@ h3, h4{
   padding: 20px;
   border-radius: 10px;
 }
+
+ button {
+    padding: 10px 20px;
+    background-color: #3aab2b;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  button:hover {
+    background-color: #90e375;
+  }
+
+  .modal {
+    display: none; /* escondido por padrão */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+  }
+
+  /* Caixa do modal */
+  .modal-content {
+    background-color: #bfea95;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+    position: relative;
+  }
+
+  .close {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    font-size: 25px;
+    cursor: pointer;
+    color: #aaa;
+  }
+
+  .close:hover {
+    color: #000;
+  }
   </style>
 </head>
 <body>
@@ -111,6 +161,27 @@ h3, h4{
  Nesta data especial, vamos comemorar o amor, a união e a família construída com tanto carinho.
  Sua presença tornará esse momento ainda mais especial.</h4>
   
+<h4>Traga um prato de salgado e um refrigerante.
+  <br>
+  Confirme sua presença por whats.
+</h4>
+
+
+<button id="abrirModal">Abrir Modal</button>
+
+<!-- Estrutura do modal -->
+<div id="meuModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Bodas de Crisoprásio</h2>
+    <p>Crisoprásio: Representa um casamento valioso que, 
+      apesar de resistente, precisa de cuidado e delicadeza 
+      para ser preservado. A pedra simboliza a fidelidade, 
+      a harmonia entre o casal e a prosperidade alcançada 
+      ao longo da jornada. </p>
+  </div>
+</div>
+
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const carousel = document.querySelector('.carousel');
@@ -158,6 +229,28 @@ h3, h4{
 
       setInterval(nextImage, 2000);
     });
+
+     // Pega os elementos
+  const modal = document.getElementById("meuModal");
+  const btn = document.getElementById("abrirModal");
+  const span = document.querySelector(".close");
+
+  // Abre o modal
+  btn.onclick = function() {
+    modal.style.display = "block";
+  }
+
+  // Fecha ao clicar no X
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+
+  // Fecha ao clicar fora do modal
+  window.onclick = function(event) {
+    if (event.target === modal) {
+      modal.style.display = "none";
+    }
+  }
   </script>
 </body>
 </html>
