--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ h3, h4{
 </h4>
 
 
-<button id="abrirModal">Abrir Modal</button>
+<button id="abrirModal">Ver significado da pedra Crisoprásio</button>
 
 <!-- Estrutura do modal -->
 <div id="meuModal" class="modal">
