--- a/index.html
+++ b/index.html
@@ -160,7 +160,13 @@ h3, h4{
 
   <h4>Convidamos você para celebrar mais um momento especial de muita história e amor.
  Nesta data especial, vamos comemorar o amor, a união e a família construída com tanto carinho.
- Sua presença tornará esse momento ainda mais especial.</h4>
+ Sua presença tornará esse momento ainda mais especial.
+<br>
+<br>
+Data: 30/11/2025
+<br>
+Horário: 17:30
+</h4>
   
 <h4>Traga um prato de salgado e um refrigerante.
   <br>
