--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@ h3, h4{
 </head>
 <body>
 
-   <img src="like.jpeg" alt="fundo" class="bg">
-   
+   <img src="fundo.jpeg" alt="fundo" class="bg">
+
   <h3>Lu & Clau - 27 anos</h3>
   <div class="carousel" aria-label="carrossel">
     <img src="rosto.jpg"/>
